Make color readouts larger to fix unexpected overflow with some fonts

--- a/src/components/tw-color-readout/tw-color-readout.css
+++ b/src/components/tw-color-readout/tw-color-readout.css
@@ -1,5 +1,5 @@
 .readout {
-  width: 24px;
+  width: 28px;
   height: 16px;
   text-align: center;
   -moz-appearance: textfield;
